--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,6 @@
     </distributionManagement>
 
     <!-- plugins configuration -->
-<!-- TODO -->
     <build>
         <pluginManagement>
             <plugins>
@@ -274,6 +273,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.0.1</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.4</version>
             </plugin>
 
             <plugin>
