--- a/commons-exception/pom.xml
+++ b/commons-exception/pom.xml
@@ -30,7 +30,7 @@
 
     <!-- project meta info -->
     <name>ChillDev Commons Exception</name>
-    <url><!-- TODO --></url>
+    <url>http://chilloutdevelopment.github.io/pl.chilldev.commons</url>
     <description>Excpetions handling and processing utilities.</description>
     <inceptionYear>2014</inceptionYear>
 
