Created Daemon subpackage for Apache Commons Daemon helpers.

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@
 # @license http://mit-license.org/ The MIT license
 # @author Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>
 # @copyright 2014 © by Rafał Wrzeszcz - Wrzasq.pl.
-# @version 0.0.1
+# @version 0.0.2
 # @since 0.0.1
 # @category ChillDev-Commons
 ##
 
 /target
 /commons-concurrent/target
+/commons-daemon/target
 /commons-exception/target
