--- a/commons-exception/pom.xml
+++ b/commons-exception/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>pl.chilldev.commons</groupId>
         <artifactId>commons</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
         <relativePath>../</relativePath>
     </parent>
 
