--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <groupId>pl.chilldev.commons</groupId>
     <artifactId>commons</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
 
     <!-- project meta info -->
     <name>ChillDev Commons</name>
