--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.10</version>
+                <configuration>
+                    <configLocation>src/main/checkstyle/checkstyle.xml</configLocation>
+                    <propertyExpansion>checkstyle.project.basedir=${project.basedir}</propertyExpansion>
+                </configuration>
             </plugin>
 
             <plugin>
