--- a/commons-concurrent/pom.xml
+++ b/commons-concurrent/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>pl.chilldev.commons</groupId>
         <artifactId>commons</artifactId>
-        <version>0.0.3-SNAPSHOT</version>
+        <version>0.0.3</version>
         <relativePath>../</relativePath>
     </parent>
 
