--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # This file is part of the ChillDev-Commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2014 © by Rafal Wrzeszcz - Wrzasq.pl.
+# @copyright 2014 - 2015 © by Rafal Wrzeszcz - Wrzasq.pl.
 ##
 
 #FIXME: https://github.com/travis-ci/travis-ci/issues/753
@@ -16,4 +16,4 @@ jdk:
 
 script: "mvn test verify"
 
-after_script: "mvn site coveralls:cobertura"
+after_script: "mvn site coveralls:report"
