--- a/commons-concurrent/pom.xml
+++ b/commons-concurrent/pom.xml
@@ -26,7 +26,7 @@
 
     <!-- project meta info -->
     <name>ChillDev Commons Concurrent</name>
-    <url>http://chilloutdevelopment.github.io/pl.chilldev.commons/commons-concurrent/</url>
+    <url>https://chilloutdevelopment.github.io/pl.chilldev.commons/commons-concurrent/</url>
     <description>Asynchronous and concurrency utilities.</description>
     <inceptionYear>2014</inceptionYear>
 
@@ -49,20 +49,10 @@
                     <plugin>
                         <groupId>com.github.github</groupId>
                         <artifactId>site-maven-plugin</artifactId>
-                        <version>0.9</version>
                         <configuration>
                             <path>${project.artifactId}/</path>
                             <merge>true</merge>
-                            <message>${project.version} Concurrent API doc.</message>
                         </configuration>
-                        <executions>
-                            <execution>
-                                <phase>site</phase>
-                                <goals>
-                                    <goal>site</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
