--- a/commons-jsonrpc/pom.xml
+++ b/commons-jsonrpc/pom.xml
@@ -26,7 +26,7 @@
 
     <!-- project meta info -->
     <name>ChillDev Commons JSON-RPC</name>
-    <url>http://chilloutdevelopment.github.io/pl.chilldev.commons/commons-jsonrpc/</url>
+    <url>https://chilloutdevelopment.github.io/pl.chilldev.commons/commons-jsonrpc/</url>
     <description>Bridge library that helps building JSON-RPC daemons using Apache MINA and JSON-RPC 2.0 Base libraries.</description>
     <inceptionYear>2015</inceptionYear>
 
@@ -121,13 +121,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>1.9.5</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.skyscreamer</groupId>
             <artifactId>jsonassert</artifactId>
             <version>1.2.3</version>
@@ -144,20 +137,10 @@
                     <plugin>
                         <groupId>com.github.github</groupId>
                         <artifactId>site-maven-plugin</artifactId>
-                        <version>0.9</version>
                         <configuration>
                             <path>${project.artifactId}/</path>
                             <merge>true</merge>
-                            <message>${project.version} JSON-RPC API doc.</message>
                         </configuration>
-                        <executions>
-                            <execution>
-                                <phase>site</phase>
-                                <goals>
-                                    <goal>site</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
