--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
     <modules>
         <module>commons-concurrent</module>
         <module>commons-daemon</module>
+        <module>commons-db</module>
         <module>commons-jsonrpc</module>
         <module>commons-text</module>
     </modules>
