Created new package `commons-service` which aims on creating generic network services.

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,7 @@
         <module>commons-daemon</module>
         <module>commons-db</module>
         <module>commons-jsonrpc</module>
+        <module>commons-service</module>
         <module>commons-text</module>
     </modules>
 </project>
