Updated parent POM version and migrated to it's dependencies.

--- a/commons-text/pom.xml
+++ b/commons-text/pom.xml
@@ -3,7 +3,7 @@
 # This file is part of the ChillDev-Commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2015 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2015 - 2016 © by Rafał Wrzeszcz - Wrzasq.pl.
 -->
 <project
     xmlns="http://maven.apache.org/POM/4.0.0"
@@ -32,7 +32,6 @@
     <!-- build profiles -->
     <profiles>
         <profile>
-            <id>deploy</id>
             <build>
                 <plugins>
                     <plugin>
