--- a/commons-db/pom.xml
+++ b/commons-db/pom.xml
@@ -58,13 +58,14 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.1.0.Final</version>
+            <version>5.2.2.Final</version>
         </dependency>
     </dependencies>
 
     <!-- build profiles -->
     <profiles>
         <profile>
+            <id>deploy</id>
             <build>
                 <plugins>
                     <plugin>
