--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
     <!-- build profiles -->
     <profiles>
         <profile>
+            <id>deploy</id>
             <build>
                 <plugins>
                     <plugin>
